[package]
name = "keyezinput"
version = "0.1.21"
edition = "2021"
license-file= "LICENSE"
keywords = ["input", "stdin", "stdlib", "easy"]
categories = ["command-line-utilities"]
description = "Rust library that facilitates ask a keyboard user input ⌨️"
repository = "https://github.com/NexCreep/EZInput"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
